--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- set the viewport for mobile devices -->
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <title>Simple JS Image Slider</title>
-  <link href="https://github.com/bzamecnik/simple-js-image-slider/blob/master/slider.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="https://raw.github.com/bzamecnik/simple-js-image-slider/master/slider.css" media="screen" rel="stylesheet" type="text/css" />
   <link href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -34,5 +34,5 @@
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
   <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
   <!-- js scripts -->
-  <script src="https://github.com/bzamecnik/simple-js-image-slider/blob/master/slider.js" type="text/javascript"></script>
+  <script src="https://raw.github.com/bzamecnik/simple-js-image-slider/master/slider.js" type="text/javascript"></script>
 </body>
