--- a/index.html
+++ b/index.html
@@ -35,4 +35,9 @@
   <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
   <!-- js scripts -->
   <script src="slider.js" type="text/javascript"></script>
+  <script type="text/javascript">
+  $(window).load(function(){
+       $(".slider").slider();
+  });
+  </script>
 </body>
